<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screen_background">
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/card_background"
        android:orientation="vertical"
        android:padding="12dp">
        <RadioButton
            android:id="@+id/radio_en"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="56dp"
            android:onClick="onRadioButtonClicked"
            android:text="@string/English"
            android:textColor="@color/text_primary"
            android:textSize="17sp" />
        <RadioButton
            android:id="@+id/radio_it"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="56dp"
            android:onClick="onRadioButtonClicked"
            android:text="@string/Italian"
            android:textColor="@color/text_primary"
            android:textSize="17sp" />
        <RadioButton
            android:id="@+id/radio_ro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="56dp"
            android:onClick="onRadioButtonClicked"
            android:text="@string/Romanian"
            android:textColor="@color/text_primary"
            android:textSize="17sp" />
    </RadioGroup>
</ScrollView>
